--- a/public/styles.scss
+++ b/public/styles.scss
@@ -2,6 +2,7 @@ $slate: hsl(222, 47.4%, 11.2%);
 $slate-sub-dark: hsl(217, 32.6%, 17.5%);
 $slate-medium: hsl(215, 16.3%, 46.9%);
 $slate-400: hsl(215, 20.2%, 65.1%);
+$slate-200: hsl(214, 31.8%, 91.4%);
 $slate-100: hsl(210, 40%, 96.1%);
 $slate-50: hsl(210, 40%, 98%);
 $white: #fff;
@@ -54,6 +55,77 @@ html {
 	
 	.msg-container {
 		flex: 1;
+		overflow-y: auto;
+		padding: 1rem;
+		
+		#current-msg-wrapper {
+			overflow-y: auto;
+			display: flex;
+			flex-direction: column;
+			gap: 0.45rem;
+			
+			.greet-msg-container {
+				display: flex;
+				justify-content: center;
+				div {
+					background: $slate-200;
+					font-size: 0.75rem;
+					padding: 0.325rem;
+					border-radius: 0.4rem;
+					display: inline;
+					margin: auto;
+				}
+			}
+			
+			.others-msg-container {
+				display: flex;
+				justify-content: flex-start;
+				
+				> div {
+					max-width: 60%;
+				}
+				
+				p {
+					background: $slate-200;
+					padding: 0.7rem;
+					border-radius: 0.5rem;
+					word-break: break-word;
+				}
+				
+				span {
+					font-size: 0.7rem;
+					color: $slate-medium;
+					text-align: left;
+					display: block;
+					padding-left: 0.5rem;
+				}
+			}
+			
+			.user-msg-container {
+				display: flex;
+				justify-content: flex-end;
+				
+				> div {
+					max-width: 60%;
+				}
+				
+				p {
+					background: $slate;
+					color: $white;
+					padding: 0.7rem;
+					border-radius: 0.5rem;
+					word-break: break-word;
+				}
+				
+				span {
+					font-size: 0.7rem;
+					color: $slate-medium;
+					text-align: right;
+					display: block;
+					padding-right: 0.5rem;
+				}
+			}
+		}
 	}
 	
 	.user-input-container {
