--- a/public/styles.scss
+++ b/public/styles.scss
@@ -158,5 +158,32 @@ html {
 }
 
 .online-user-list-container {
-	display: none;
+	box-shadow: -5px 0 10px #00000010;
+	height: 100vh;
+	width: 0;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	transition: 200ms;
+	overflow: hidden;
+	
+	ul {
+		height: 100vh;
+		width: 100%;
+		background: $slate;
+		list-style: none;
+		overflow-y: auto;
+		
+		li {
+			color: $white;
+			padding: 1rem;
+			transition: 150ms;
+			white-space: nowrap;
+			
+			&:hover {
+				background: $slate-sub-dark;
+			}
+		}
+	}
 }
