--- a/public/styles.scss
+++ b/public/styles.scss
@@ -55,10 +55,11 @@ html {
 	
 	.msg-container {
 		flex: 1;
-		overflow-y: auto;
-		padding: 1rem;
+		overflow: hidden;
+		padding: 0 1rem;
 		
 		#current-msg-wrapper {
+			height: 100%;
 			overflow-y: auto;
 			display: flex;
 			flex-direction: column;
