--- a/public/styles.css
+++ b/public/styles.css
@@ -48,10 +48,10 @@ html {
 .main-container .msg-container {
 	flex: 1;
 	overflow: hidden;
-	padding: 0 1rem;
 }
 
 .main-container .msg-container #current-msg-wrapper {
+	padding: 1rem;
 	height: 100%;
 	overflow-y: auto;
 	display: flex;
