--- a/public/styles.scss
+++ b/public/styles.scss
@@ -56,9 +56,9 @@ html {
 	.msg-container {
 		flex: 1;
 		overflow: hidden;
-		padding: 0 1rem;
 		
 		#current-msg-wrapper {
+			padding: 1rem;
 			height: 100%;
 			overflow-y: auto;
 			display: flex;
