--- a/public/entrance.scss
+++ b/public/entrance.scss
@@ -22,12 +22,15 @@ html {
 	align-items: center;
 	
 	> .wrapper {
+		width: 85%;
+		max-width: 25rem;
 		padding: 2rem 1.5rem;
 		box-shadow: 0 0.25rem 0.5rem #00000020;
 		display: grid;
 		gap: 1rem;
 		
 		p.error {
+			font-size: 0.7rem;
 			color: hsl(0, 84.2%, 60.2%);
 		}
 		
@@ -42,6 +45,7 @@ html {
 			
 			input {
 				font-size: 1rem;
+				width: 100%;
 				padding: 0.7rem;
 				border: 2px solid $dark;
 				border-radius: 0.25rem;
