--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,12 +12,15 @@
 	</head>
 	<body>
 		<div class="main">
-			<form class="wrapper">
+			<form class="wrapper" action="/register" method="post">
 				<header>
 					<h1>Get started</h1>
 					<p>Create Account</p>
 				</header>
 				<div class="form-group">
+					<% if(errorFlash) { %>
+					<p class="error"><%= errorFlash %></p>
+					<% } %>
 					<div class="input-group">
 						<input type="text" id="name" name="name" placeholder=" " required>
 						<label for="name">Name</label>
@@ -30,7 +33,7 @@
 						<input type="password" id="password" name="password" placeholder=" " required>
 						<label for="password">Password</label>
 					</div>
-					<button type="submit">Login</button>
+					<button type="submit">Create Account</button>
 				</div>
 				<p class="switch-page-caption">Have an account? <a href="/login">Login</a></p>
 			</form>
