Fixed small ejs render bug

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,8 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" href="/main.css">
 		<script>
-			const id = <%= user.id %>
-			const username = <%= user.name %>
+			const id = '<%= user.id %>'
+			const username = '<%= user.name %>'
 		</script>
 		<script defer src="/script.js"></script>
 		<title><%= title %></title>
