--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" href="/main.css">
+		<script src="/socket.io/socket.io.js"></script>
 		<script>
 			const id = '<%= user.id %>'
 			const username = '<%= user.name %>'
@@ -26,7 +27,7 @@
 			
 			<!-- All messages container -->
 			<section id="messagesContainer" class="messages-container">
-				<div class="old-messages-container"></div>
+				<div id="oldMessagesContainer" class="old-messages-container"></div>
 				<!-- Messages will be generated here -->
 			</section>
 			
