--- a/public/main.css
+++ b/public/main.css
@@ -16,7 +16,6 @@ html {
 	width: 100%;
 	height: 100vh;
 	display: flex;
-	flex-direction: column;
 	background: #fafafa;
 	position: relative;
 }
@@ -24,7 +23,9 @@ html {
 .main header {
 	background: #18181b;
 	color: #fff;
-	position: relative;
+	position: fixed;
+	top: 0;
+	width: 100%;
 }
 
 .main header h1 {
@@ -59,6 +60,13 @@ html {
 	overflow-y: auto;
 	scroll-behavior: smooth;
 	padding: 1rem;
+	margin: 3rem 0;
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
+}
+
+.main .messages-container .old-messages-container {
 	display: flex;
 	flex-direction: column;
 	gap: 0.5rem;
@@ -79,7 +87,7 @@ html {
 }
 
 .main .messages-container .other-msg-wrapper > div p {
-	padding: 1rem;
+	padding: 0.87rem;
 	background: #e4e4e7;
 	border-radius: 0.5rem;
 	word-break: break-all;
@@ -102,7 +110,7 @@ html {
 }
 
 .main .messages-container .user-msg-wrapper > div p {
-	padding: 1rem;
+	padding: 0.87rem;
 	background: #18181b;
 	color: #fff;
 	border-radius: 0.5rem;
@@ -112,6 +120,9 @@ html {
 .main .input-container {
 	box-shadow: 0 -0.5rem 0.5rem #00000010;
 	display: flex;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
 }
 
 .main .input-container input {
@@ -119,7 +130,7 @@ html {
 	font-family: 'Lexend Deca';
 	font-size: 1rem;
 	border: none;
-	background: transparent;
+	background: #fff;
 	padding: 1rem;
 	outline: none;
 }
@@ -139,7 +150,7 @@ html {
 .main .active-users-list-container {
 	width: 0;
 	height: 100vh;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	right: 0;
 	display: flex;
