--- a/public/main.scss
+++ b/public/main.scss
@@ -21,14 +21,15 @@ html {
 	width: 100%;
 	height: 100vh;
 	display: flex;
-	flex-direction: column;
 	background: hsl(0, 0%, 98%);
 	position: relative;
 	
 	header {
 		background: $dark;
 		color: $white;
-		position: relative;
+		position: fixed;
+		top: 0;
+		width: 100%;
 		
 		h1 {
 			font-family: 'Montserrat';
@@ -63,9 +64,16 @@ html {
 		overflow-y: auto;
 		scroll-behavior: smooth;
 		padding: 1rem;
+		margin: 3rem 0;
 		display: flex;
 		flex-direction: column;
 		gap: 0.5rem;
+		
+		.old-messages-container {
+			display: flex;
+			flex-direction: column;
+			gap: 0.5rem;
+		}
 		
 		.other-msg-wrapper {
 			display: flex;
@@ -80,7 +88,7 @@ html {
 				}
 				
 				p {
-					padding: 1rem;
+					padding: 0.87rem;
 					background: hsl(240, 5.9%, 90%);
 					border-radius: 0.5rem;
 					word-break: break-all;
@@ -103,7 +111,7 @@ html {
 				}
 				
 				p {
-					padding: 1rem;
+					padding: 0.87rem;
 					background: $dark;
 					color: $white;
 					border-radius: 0.5rem;
@@ -116,13 +124,16 @@ html {
 	.input-container {
 		box-shadow: 0 -0.5rem 0.5rem #00000010;
 		display: flex;
+		position: fixed;
+		bottom: 0;
+		width: 100%;
 		
 		input {
 			flex: 1;
 			font-family: 'Lexend Deca';
 			font-size: 1rem;
 			border: none;
-			background: transparent;
+			background: $white;
 			padding: 1rem;
 			outline: none;
 			
@@ -143,7 +154,7 @@ html {
 	.active-users-list-container {
 		width: 0;
 		height: 100vh;
-		position: absolute;
+		position: fixed;
 		top: 0;
 		right: 0;
 		display: flex;
